tests/snapshots/cli_golden__add.snap
---
source: tests/cli_golden.rs
expression: normalize_json(add_json)
---
{
  "ok": true,
  "schema_version": "2",
  "stats": {
    "chunk_count": null,
    "db_size_bytes": null,
    "doc_count": null,
    "snapshot": "",
    "took_ms": 0,
    "total_hits": 1
  }
}
