tests/snapshots/cli_golden__context.snap
---
source: tests/cli_golden.rs
expression: normalize_json(context_json)
---
{
  "context": {
    "budget_tokens": 16,
    "chunks": [
      {
        "doc_id": "acba96a2aa4384ee962379fefb8be501ff58ad9715e8a070a112d0b17c1fa60d",
        "hash": "6914abb3764a0783f565cca447f95354be9ea790a9fb6c6667c981d4db888004",
        "id": "564bb7dab88cd86d292dadfcb0554cb4ecf6ff4380c4beec12a72fdbaef6643f",
        "mtime": "",
        "offset": 0,
        "path": "docs/a.txt",
        "text": "hello world this is recall",
        "tokens": 5
      }
    ],
    "text": "hello world this is recall",
    "used_tokens": 5
  },
  "ok": true,
  "query": {
    "filters": null,
    "limit": 100,
    "offset": 0,
    "rql": null,
    "text": "recall"
  },
  "schema_version": "1",
  "stats": {
    "chunk_count": null,
    "db_size_bytes": null,
    "doc_count": null,
    "snapshot": "",
    "took_ms": 0,
    "total_hits": 1
  }
}
