tests/snapshots/cli_golden__query.snap
---
source: tests/cli_golden.rs
expression: normalize_json(query_json)
---
{
  "ok": true,
  "query": {
    "filters": null,
    "lexical_mode": "fts5",
    "limit": 3,
    "offset": 0,
    "rql": "FROM chunk USING semantic('recall') LIMIT 3 SELECT chunk.text, chunk.offset, doc.path;",
    "snapshot": "",
    "text": ""
  },
  "results": [
    {
      "chunk": {
        "offset": 0,
        "text": "hello world this is recall"
      },
      "doc": {
        "path": "docs/a.txt"
      }
    }
  ],
  "schema_version": "1",
  "stats": {
    "chunk_count": null,
    "db_size_bytes": null,
    "doc_count": null,
    "snapshot": "",
    "timings": {},
    "took_ms": 0,
    "total_hits": 1
  }
}
