tests/snapshots/cli_golden__query_structured_filter.snap
---
source: tests/cli_golden.rs
expression: normalize_json(query_structured_json)
---
{
  "ok": true,
  "query": {
    "filters": null,
    "limit": 2,
    "offset": 0,
    "rql": "SELECT doc.path FROM doc FILTER doc.path LIKE '%docs%' LIMIT 2;",
    "text": ""
  },
  "results": [
    {
      "doc": {
        "path": "docs/a.txt"
      }
    }
  ],
  "schema_version": "1",
  "stats": {
    "chunk_count": null,
    "db_size_bytes": null,
    "doc_count": null,
    "snapshot": "",
    "took_ms": 0,
    "total_hits": 1
  }
}
