tests/snapshots/cli_golden__stats.snap
---
source: tests/cli_golden.rs
expression: normalize_json(stats_json)
---
{
  "ok": true,
  "schema_version": "1",
  "stats": {
    "chunk_count": 1,
    "corpus": {
      "bytes": 0,
      "chunks": 1,
      "docs": 1,
      "tokens": 5
    },
    "db_size_bytes": 81920,
    "doc_count": 1,
    "memory": {},
    "snapshot": "",
    "took_ms": 0,
    "total_hits": 0
  }
}
